<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_search"
        android:title="@string/home_search"
        android:icon="@drawable/ic_search_white_36dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/home_friend_requests"
        android:title="@string/home_friend_requests"
        android:icon="@drawable/ic_person_add_white_36dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/home_logout"
        android:title="@string/home_logout"
        android:icon="@drawable/ic_power_settings_new_white_36dp"
        app:showAsAction="ifRoom"/>


</menu>