<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nsn.sportal.RegisterActivity"
    tools:showIn="@layout/activity_register2"
    android:id="@+id/register_form"
    android:background="@color/colorRegisterHeadings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/new_user_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:maxLines="1"
        android:singleLine="true"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"
            android:paddingLeft="4px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First Name"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingLeft="4px"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last Name"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"
            />

        <EditText android:id="@+id/user_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:singleLine="true"
            android:inputType="textNoSuggestions"

            android:textColor="@color/colorPrimaryDark"
        />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

        <EditText android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:textColor="@color/colorPrimaryDark"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"


            android:textColor="@color/colorPrimaryDark"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/error_incorrect_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textWebPassword|textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:password="false"

            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date of Birth"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

        <EditText android:id="@+id/verify_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Retype Password"
            android:inputType="textWebPassword|textPassword"
            android:maxLines="1"
            android:singleLine="true"



            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/date"
        android:id="@+id/user_dob"
        android:layout_gravity="center_horizontal"


        android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Country"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="Gender M/F"
            android:id="@+id/user_gender"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sport"
            android:maxLines="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle_register_two"/>
        <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_country"
        android:layout_gravity="center_horizontal"
        android:inputType="textNoSuggestions"
        android:hint="Country"


        android:textColor="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="Sport"
            android:id="@+id/user_sport"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle_button"
        android:layout_marginTop="12dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
